chore(gradle): edit CheckStyle, Lint rules